Implement the canonical diagnostic model across all six reference implementations (#173)
* Specify the diagnostic contract and extend the conformance corpus

Issue #169 specified a canonical diagnostic model but no implementation
emitted one. Before changing six implementations, pin the contract they
build against.

Adds conformance/codes.toml, a machine-readable form of the SPEC.md code
registry (41 codes with severity and phases), generated by
conformance/tools/gen_codes.py. The generator's --check mode guards
against drift in both directions: a hand-edited data file and a spec
change that outruns it.

Extends the corpus with [[case.diagnostics]] expectations on 50 of the
cases (51 diagnostics across 28 codes). Expectations are derived from
SPEC.md prose, never from observed tool output - four implementations
emit a generic validation-error the spec forbids, so recording behavior
would have encoded the exact defects being fixed. Matching is
REQUIRED-PRESENT rather than exact-set because SPEC.md permits fail-fast,
so an exact-set assertion would fail conforming implementations; six
universal checks constrain total output instead.

Three SPEC.md gaps surfaced while writing the contract:

- The discovery code table omitted resource-limit-exceeded while three
  other places said it applies during discovery.
- The schema-path rule was demonstrated by example but never stated. A
  single property declaring the failing rule paths to that property; a
  rule spanning properties or a structural rule paths to the definition
  table. Now normative, with two added example rows.
- A document that is not well-formed TOML had no defined outcome. The
  phases section said its failure "is a parse error rather than a
  validation diagnostic", but the exit-status section named only the
  schema's parse failure, and nothing said what to emit instead. Exit 2
  now covers the document as well, and two MUST NOT rules forbid
  reporting it as a diagnostic or as invalid. Adds a
  document-